# RedaktSafe

./: .gitignore  DECISIONS.md  GOAL.md  IMPLEMENT.md  PROGRESS.md  README.md  STANDARDS.md  TASK_QUEUE.md  pyproject.toml
docs/: BENCHMARKS.md
docs/plans/: 2026-06-15-redaktsafe-mvp.md  2026-06-16-learning-loop-design.md  2026-06-16-learning-loop.md
evals/: cases.jsonl
fixtures/synthetic/: clinical_false_positive_drug_names.txt  date_and_phone_ambiguity.txt  doctor_vs_patient_name.txt  duplicate_ehr_scaffold.txt  hidden_footer_identifier.txt  high_risk_mixed_identifiers.txt  mixed_research_intake.txt  no_phi_clean_note.txt  ocr_like_noise.txt  simple_identifiers.txt  unsafe_cloud_export_request.txt
frontend/: app.js  index.html  styles.css
redaktsafe_codex_handoff/: CODEX.md  PACKAGE_MANIFEST.md  README_CODEX_HANDOFF.md  RedaktSafe_Codex_Handoff_Master.docx  acceptance_checklist.json
redaktsafe_codex_handoff/docs/: 00_PRODUCT_DECISION_MEMO.md  01_PRODUCT_REQUIREMENTS.md  02_ARCHITECTURE_AND_DATA_FLOW.md  03_IMPLEMENTATION_SPEC.md  04_BUILD_PLAN_AND_MILESTONES.md  05_SMALL_MODEL_STRATEGY.md  06_REPO_INTEGRATION_MAP.md  07_TESTING_AND_EVAL_PLAN.md  08_SECURITY_PRIVACY_GOVERNANCE.md  09_UI_UX_SPEC.md  10_ACCEPTANCE_CRITERIA.md  11_RISK_REGISTER_AND_KILL_CRITERIA.md  12_FUTURE_EXPANSION_OPTIONS.md
tests/: test_adapters.py  test_api.py  test_benchmarks.py  test_cli_doctor.py  test_cli_packet.py  test_contracts.py  test_detectors.py  test_eval.py  test_hf_model_adapter.py  test_learning.py  test_pipeline_packet.py  test_redaction.py  test_ui.py
(+43 files in other folders)
